[PN-14791] - Refactored TimelineService methods + tests